--- a/docker-compose-multiple-clusters.yml
+++ b/docker-compose-multiple-clusters.yml
@@ -46,7 +46,7 @@ services:
       - zookeeper-data-0:/var/lib/zookeeper/data:Z
       - zookeeper-log-0:/var/lib/zookeeper/log:Z
     environment:
-      ZOOKEEPER_CLIENT_PORT: 2181
+      ZOOKEEPER_CLIENT_PORT: '2181'
       ZOOKEEPER_ADMIN_ENABLE_SERVER: 'false'
   kafka-0:
     image: confluentinc/cp-kafka
@@ -55,21 +55,21 @@ services:
     ports:
       - 9092:9092
     environment:
-      KAFKA_ZOOKEEPER_CONNECT: zookeeper-0:2181
-      KAFKA_NUM_PARTITIONS: 12
-      KAFKA_COMPRESSION_TYPE: gzip
-      KAFKA_OFFSETS_TOPIC_REPLICATION_FACTOR: 1
-      KAFKA_TRANSACTION_STATE_LOG_REPLICATION_FACTOR: 1
-      KAFKA_TRANSACTION_STATE_LOG_MIN_ISR: 1
+      KAFKA_ZOOKEEPER_CONNECT: 'zookeeper-0:2181'
+      KAFKA_NUM_PARTITIONS: '12'
+      KAFKA_COMPRESSION_TYPE: 'gzip'
+      KAFKA_OFFSETS_TOPIC_REPLICATION_FACTOR: '1'
+      KAFKA_TRANSACTION_STATE_LOG_REPLICATION_FACTOR: '1'
+      KAFKA_TRANSACTION_STATE_LOG_MIN_ISR: '1'
       KAFKA_CONFLUENT_SUPPORT_METRICS_ENABLE: 'false'
-      KAFKA_JMX_PORT: 9091
+      KAFKA_JMX_PORT: '9091'
       KAFKA_AUTO_CREATE_TOPICS_ENABLE: 'true'
-      KAFKA_AUTHORIZER_CLASS_NAME: kafka.security.auth.SimpleAclAuthorizer
+      KAFKA_AUTHORIZER_CLASS_NAME: 'kafka.security.auth.SimpleAclAuthorizer'
       KAFKA_ALLOW_EVERYONE_IF_NO_ACL_FOUND: 'true'
-      KAFKA_LISTENERS: INTERNAL://kafka-0:29092,OUTSIDE://kafka-0:9092
-      KAFKA_ADVERTISED_LISTENERS: INTERNAL://kafka-0:29092,OUTSIDE://localhost:9092
-      KAFKA_LISTENER_SECURITY_PROTOCOL_MAP: INTERNAL:PLAINTEXT,OUTSIDE:PLAINTEXT
-      KAFKA_INTER_BROKER_LISTENER_NAME: INTERNAL
+      KAFKA_LISTENERS: 'INTERNAL://kafka-0:29092,OUTSIDE://kafka-0:9092'
+      KAFKA_ADVERTISED_LISTENERS: 'INTERNAL://kafka-0:29092,OUTSIDE://localhost:9092'
+      KAFKA_LISTENER_SECURITY_PROTOCOL_MAP: 'INTERNAL:PLAINTEXT,OUTSIDE:PLAINTEXT'
+      KAFKA_INTER_BROKER_LISTENER_NAME: 'INTERNAL'
     links:
       - zookeeper-0
   schema-registry-0:
@@ -79,10 +79,10 @@ services:
     depends_on:
       - kafka-0
     environment:
-      SCHEMA_REGISTRY_KAFKASTORE_BOOTSTRAP_SERVERS: "PLAINTEXT://kafka-0:29092"
-      SCHEMA_REGISTRY_HOST_NAME: schema-registry-0
-      SCHEMA_REGISTRY_LISTENERS: "http://schema-registry-0:8085"
-      SCHEMA_REGISTRY_LOG4J_ROOT_LOGLEVEL: INFO
+      SCHEMA_REGISTRY_KAFKASTORE_BOOTSTRAP_SERVERS: 'PLAINTEXT://kafka-0:29092'
+      SCHEMA_REGISTRY_HOST_NAME: 'schema-registry-0'
+      SCHEMA_REGISTRY_LISTENERS: 'http://schema-registry-0:8085'
+      SCHEMA_REGISTRY_LOG4J_ROOT_LOGLEVEL: 'INFO'
   connect-0:
     image: confluentinc/cp-kafka-connect
     ports:
@@ -91,27 +91,27 @@ services:
       - kafka-0
       - schema-registry-0
     environment:
-      CONNECT_BOOTSTRAP_SERVERS: kafka-0:29092
-      CONNECT_REST_PORT: 8083
-      CONNECT_HOST_NAME: connect-0
-      CONNECT_REST_LISTENERS: http://connect-0:8083
-      CONNECT_LISTENERS: http://connect-0:8083
-      CONNECT_REST_ADVERTISED_HOST_NAME: connect-0
-      CONNECT_CONFIG_STORAGE_TOPIC: __connect-0-config
-      CONNECT_OFFSET_STORAGE_TOPIC: __connect-0-offsets
-      CONNECT_STATUS_STORAGE_TOPIC: __connect-0-status
-      CONNECT_GROUP_ID: "kafka-connect-0"
-      CONNECT_KEY_CONVERTER_SCHEMAS_ENABLE: "true"
-      CONNECT_KEY_CONVERTER: io.confluent.connect.avro.AvroConverter
-      CONNECT_KEY_CONVERTER_SCHEMA_REGISTRY_URL: http://schema-registry-0:8085
-      CONNECT_VALUE_CONVERTER_SCHEMAS_ENABLE: "true"
-      CONNECT_VALUE_CONVERTER: io.confluent.connect.avro.AvroConverter
-      CONNECT_VALUE_CONVERTER_SCHEMA_REGISTRY_URL: http://schema-registry-0:8085
-      CONNECT_INTERNAL_KEY_CONVERTER: org.apache.kafka.connect.json.JsonConverter
-      CONNECT_INTERNAL_VALUE_CONVERTER: org.apache.kafka.connect.json.JsonConverter
-      CONNECT_OFFSET_STORAGE_REPLICATION_FACTOR: 1
-      CONNECT_CONFIG_STORAGE_REPLICATION_FACTOR: 1
-      CONNECT_STATUS_STORAGE_REPLICATION_FACTOR: 1
+      CONNECT_BOOTSTRAP_SERVERS: 'kafka-0:29092'
+      CONNECT_REST_PORT: '8083'
+      CONNECT_HOST_NAME: 'connect-0'
+      CONNECT_REST_LISTENERS: 'http://connect-0:8083'
+      CONNECT_LISTENERS: 'http://connect-0:8083'
+      CONNECT_REST_ADVERTISED_HOST_NAME: 'connect-0'
+      CONNECT_CONFIG_STORAGE_TOPIC: '__connect-0-config'
+      CONNECT_OFFSET_STORAGE_TOPIC: '__connect-0-offsets'
+      CONNECT_STATUS_STORAGE_TOPIC: '__connect-0-status'
+      CONNECT_GROUP_ID: 'kafka-connect-0'
+      CONNECT_KEY_CONVERTER_SCHEMAS_ENABLE: 'true'
+      CONNECT_KEY_CONVERTER: 'io.confluent.connect.avro.AvroConverter'
+      CONNECT_KEY_CONVERTER_SCHEMA_REGISTRY_URL: 'http://schema-registry-0:8085'
+      CONNECT_VALUE_CONVERTER_SCHEMAS_ENABLE: 'true'
+      CONNECT_VALUE_CONVERTER: 'io.confluent.connect.avro.AvroConverter'
+      CONNECT_VALUE_CONVERTER_SCHEMA_REGISTRY_URL: 'http://schema-registry-0:8085'
+      CONNECT_INTERNAL_KEY_CONVERTER: 'org.apache.kafka.connect.json.JsonConverter'
+      CONNECT_INTERNAL_VALUE_CONVERTER: 'org.apache.kafka.connect.json.JsonConverter'
+      CONNECT_OFFSET_STORAGE_REPLICATION_FACTOR: '1'
+      CONNECT_CONFIG_STORAGE_REPLICATION_FACTOR: '1'
+      CONNECT_STATUS_STORAGE_REPLICATION_FACTOR: '1'
       CONNECT_PLUGIN_PATH: ' /usr/share/java/'
   connect-1:
     image: confluentinc/cp-kafka-connect
@@ -121,27 +121,27 @@ services:
       - kafka-0
       - schema-registry-0
     environment:
-      CONNECT_BOOTSTRAP_SERVERS: kafka-0:29092
-      CONNECT_REST_PORT: 8084
-      CONNECT_HOST_NAME: connect-1
-      CONNECT_REST_LISTENERS: http://connect-1:8084
-      CONNECT_LISTENERS: http://connect-1:8084
-      CONNECT_REST_ADVERTISED_HOST_NAME: connect-1
-      CONNECT_CONFIG_STORAGE_TOPIC: __connect-1-config
-      CONNECT_OFFSET_STORAGE_TOPIC: __connect-1-offsets
-      CONNECT_STATUS_STORAGE_TOPIC: __connect-1-status
-      CONNECT_GROUP_ID: "kafka-connect-1"
-      CONNECT_KEY_CONVERTER_SCHEMAS_ENABLE: "true"
-      CONNECT_KEY_CONVERTER: io.confluent.connect.avro.AvroConverter
-      CONNECT_KEY_CONVERTER_SCHEMA_REGISTRY_URL: http://schema-registry-0:8085
-      CONNECT_VALUE_CONVERTER_SCHEMAS_ENABLE: "true"
-      CONNECT_VALUE_CONVERTER: io.confluent.connect.avro.AvroConverter
-      CONNECT_VALUE_CONVERTER_SCHEMA_REGISTRY_URL: http://schema-registry-0:8085
-      CONNECT_INTERNAL_KEY_CONVERTER: org.apache.kafka.connect.json.JsonConverter
-      CONNECT_INTERNAL_VALUE_CONVERTER: org.apache.kafka.connect.json.JsonConverter
-      CONNECT_OFFSET_STORAGE_REPLICATION_FACTOR: 1
-      CONNECT_CONFIG_STORAGE_REPLICATION_FACTOR: 1
-      CONNECT_STATUS_STORAGE_REPLICATION_FACTOR: 1
+      CONNECT_BOOTSTRAP_SERVERS: 'kafka-0:29092'
+      CONNECT_REST_PORT: '8084'
+      CONNECT_HOST_NAME: 'connect-1'
+      CONNECT_REST_LISTENERS: 'http://connect-1:8084'
+      CONNECT_LISTENERS: 'http://connect-1:8084'
+      CONNECT_REST_ADVERTISED_HOST_NAME: 'connect-1'
+      CONNECT_CONFIG_STORAGE_TOPIC: '__connect-1-config'
+      CONNECT_OFFSET_STORAGE_TOPIC: '__connect-1-offsets'
+      CONNECT_STATUS_STORAGE_TOPIC: '__connect-1-status'
+      CONNECT_GROUP_ID: 'kafka-connect-1'
+      CONNECT_KEY_CONVERTER_SCHEMAS_ENABLE: 'true'
+      CONNECT_KEY_CONVERTER: 'io.confluent.connect.avro.AvroConverter'
+      CONNECT_KEY_CONVERTER_SCHEMA_REGISTRY_URL: 'http://schema-registry-0:8085'
+      CONNECT_VALUE_CONVERTER_SCHEMAS_ENABLE: 'true'
+      CONNECT_VALUE_CONVERTER: 'io.confluent.connect.avro.AvroConverter'
+      CONNECT_VALUE_CONVERTER_SCHEMA_REGISTRY_URL: 'http://schema-registry-0:8085'
+      CONNECT_INTERNAL_KEY_CONVERTER: 'org.apache.kafka.connect.json.JsonConverter'
+      CONNECT_INTERNAL_VALUE_CONVERTER: 'org.apache.kafka.connect.json.JsonConverter'
+      CONNECT_OFFSET_STORAGE_REPLICATION_FACTOR: '1'
+      CONNECT_CONFIG_STORAGE_REPLICATION_FACTOR: '1'
+      CONNECT_STATUS_STORAGE_REPLICATION_FACTOR: '1'
       CONNECT_PLUGIN_PATH: ' /usr/share/java/'
 # ANOTHER CLUSTER
   zookeeper-1:
@@ -150,7 +150,7 @@ services:
       - zookeeper-data-1:/var/lib/zookeeper/data:Z
       - zookeeper-log-1:/var/lib/zookeeper/log:Z
     environment:
-      ZOOKEEPER_CLIENT_PORT: 2171
+      ZOOKEEPER_CLIENT_PORT: '2171'
       ZOOKEEPER_ADMIN_ENABLE_SERVER: 'false'
   kafka-1:
     image: confluentinc/cp-kafka
@@ -159,20 +159,20 @@ services:
     ports:
       - 9072:9072
     environment:
-      KAFKA_ZOOKEEPER_CONNECT: zookeeper-1:2171
-      KAFKA_NUM_PARTITIONS: 12
-      KAFKA_COMPRESSION_TYPE: gzip
-      KAFKA_OFFSETS_TOPIC_REPLICATION_FACTOR: 1
-      KAFKA_TRANSACTION_STATE_LOG_REPLICATION_FACTOR: 1
-      KAFKA_TRANSACTION_STATE_LOG_MIN_ISR: 1
+      KAFKA_ZOOKEEPER_CONNECT: 'zookeeper-1:2171'
+      KAFKA_NUM_PARTITIONS: '12'
+      KAFKA_COMPRESSION_TYPE: 'gzip'
+      KAFKA_OFFSETS_TOPIC_REPLICATION_FACTOR: '1'
+      KAFKA_TRANSACTION_STATE_LOG_REPLICATION_FACTOR: '1'
+      KAFKA_TRANSACTION_STATE_LOG_MIN_ISR: '1'
       KAFKA_CONFLUENT_SUPPORT_METRICS_ENABLE: 'false'
-      KAFKA_JMX_PORT: 9071
+      KAFKA_JMX_PORT: '9071'
       KAFKA_AUTO_CREATE_TOPICS_ENABLE: 'true'
-      KAFKA_AUTHORIZER_CLASS_NAME: kafka.security.auth.SimpleAclAuthorizer
+      KAFKA_AUTHORIZER_CLASS_NAME: 'kafka.security.auth.SimpleAclAuthorizer'
       KAFKA_ALLOW_EVERYONE_IF_NO_ACL_FOUND: 'true'
-      KAFKA_LISTENERS: INTERNAL://kafka-1:29072,OUTSIDE://kafka-1:9072
-      KAFKA_ADVERTISED_LISTENERS: INTERNAL://kafka-1:29072,OUTSIDE://localhost:9072
-      KAFKA_LISTENER_SECURITY_PROTOCOL_MAP: INTERNAL:PLAINTEXT,OUTSIDE:PLAINTEXT
-      KAFKA_INTER_BROKER_LISTENER_NAME: INTERNAL
+      KAFKA_LISTENERS: 'INTERNAL://kafka-1:29072,OUTSIDE://kafka-1:9072'
+      KAFKA_ADVERTISED_LISTENERS: 'INTERNAL://kafka-1:29072,OUTSIDE://localhost:9072'
+      KAFKA_LISTENER_SECURITY_PROTOCOL_MAP: 'INTERNAL:PLAINTEXT,OUTSIDE:PLAINTEXT'
+      KAFKA_INTER_BROKER_LISTENER_NAME: 'INTERNAL'
     links:
       - zookeeper-1
