--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -93,8 +93,17 @@ akhq:
         enable.auto.commit: "false"
         default.api.timeout.ms: 15000
 
+  connections:
+    kafka-cluster:
+      properties:
+        bootstrap.servers: "10.32.130.190:9092"
+      schema-registry:
+        url: "http://main-schema-registry.prod.iadvize.io"
+      connect:
+        - name: "Kafka-Connect-A"
+          url: "http://main-automation-kafka-connect-tool.prod.iadvize.io"
   pagination:
-    page-size: 25
+    page-size: 5
     threads: 16
 
   topic:
@@ -123,39 +132,39 @@ akhq:
       admin:
         name: admin
         roles:
-        - topic/read
-        - topic/insert
-        - topic/delete
-        - topic/config/update
-        - node/read
-        - node/config/update
-        - topic/data/read
-        - topic/data/insert
-        - topic/data/delete
-        - group/read
-        - group/delete
-        - group/offsets/update
-        - registry/read
-        - registry/insert
-        - registry/update
-        - registry/delete
-        - registry/version/delete
-        - acls/read
-        - connect/read
-        - connect/insert
-        - connect/update
-        - connect/delete
-        - connect/state/update
+          - topic/read
+          - topic/insert
+          - topic/delete
+          - topic/config/update
+          - node/read
+          - node/config/update
+          - topic/data/read
+          - topic/data/insert
+          - topic/data/delete
+          - group/read
+          - group/delete
+          - group/offsets/update
+          - registry/read
+          - registry/insert
+          - registry/update
+          - registry/delete
+          - registry/version/delete
+          - acls/read
+          - connect/read
+          - connect/insert
+          - connect/update
+          - connect/delete
+          - connect/state/update
       reader:
         name: reader
         roles:
-        - topic/read
-        - node/read
-        - topic/data/read
-        - group/read
-        - registry/read
-        - acls/read
-        - connect/read
+          - topic/read
+          - node/read
+          - topic/data/read
+          - group/read
+          - registry/read
+          - acls/read
+          - connect/read
       no-roles:
         name: no-roles
         roles: []
