--- a/helm/akhq/values.yaml
+++ b/helm/akhq/values.yaml
@@ -25,7 +25,7 @@ extraEnv: []
 #   value: "/any/additional/jars/desired.jar:/go/here.jar"
 
 ## Or you can also use configmap for the configuration...
-configuration: |
+configuration:
   akhq:
     server:
       access-log:
