--- a/helm/akhq/values.yaml
+++ b/helm/akhq/values.yaml
@@ -63,6 +63,10 @@ extraVolumeMounts: []
 
 # Specify ServiceAccount for pod
 serviceAccountName: null
+serviceAccount:
+  create: false
+  #annotations:
+  #  eks.amazonaws.com/role-arn: arn:aws:iam::123456789000:role/iam-role-name-here
 
 # Add your own init container or uncomment and modify the example.
 initContainers: {}
@@ -73,13 +77,15 @@ initContainers: {}
 #      - mountPath: /tmp
 #        name: certs
 
-securityContext: {}
+securityContext:
+  fsGroup: 1000
+  runAsGroup: 1000
+  runAsUser: 1000
 #  capabilities:
 #    drop:
 #      - ALL
 #  # readOnlyRootFilesystem: true
 #  runAsNonRoot: true
-#  runAsUser: 1000
 
 service:
   enabled: true
