fix serviceAccountName logic

--- a/helm/akhq/templates/serviceaccount.yaml
+++ b/helm/akhq/templates/serviceaccount.yaml
@@ -11,5 +11,5 @@ metadata:
   annotations:
 {{ toYaml . | indent 4 }}
 {{- end }}
-  name: {{ include "akhq.fullname" . }}
+  name: {{ include "akhq.serviceAccountName" . }}
 {{- end }}
