--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -173,6 +173,7 @@ jobs:
         with:
           push: true
           tags: tchiotludo/akhq:${{ steps.vars.outputs.tag }}
+          platforms: linux/amd64,linux/arm64
 
       # Slack
       - name: Slack notification
