--- a/helm/akhq/values.yaml
+++ b/helm/akhq/values.yaml
@@ -3,6 +3,10 @@
 image:
   repository: tchiotludo/akhq
   tag: "" # uses Chart.AppVersion by default
+  annotations: {}
+    # custom.annotation: "true"
+  labels: {}
+    # custom.label: "true"
 
 # custom annotations (example: for prometheus)
 annotations: {}
@@ -12,7 +16,7 @@ annotations: {}
 
 # custom labels
 labels: {}
-  # custom.label: 'true
+  # custom.label: "true"
 
 ## You can put directly your configuration here... or add java opts or any other env vars
 extraEnv: []
