feat(helm): added jwt secret auto gen (#1062)
Introduced a new auto generated secret key that will only be
generated on first install called "jwtSignatureGeneratorSecret".
The value of this secret key is added via an environment variable
setting to the depoyment only if no user defined variable with
the same name is found. This should avoid duplicate env var names
that can cause trouble with subsequent changes to the deployment
object.

--- a/helm/akhq/templates/secret.yaml
+++ b/helm/akhq/templates/secret.yaml
@@ -1,8 +1,9 @@
-{{- if and ( not .Values.existingSecrets) (.Values.secrets) }}
+{{- $secretName:= print (include "akhq.fullname" .) "-secrets" -}}
+{{- $secret := lookup "v1" "Secret" .Release.Namespace $secretName -}}
 apiVersion: v1
 kind: Secret
 metadata:
-  name: {{ template "akhq.fullname" . }}-secrets
+  name: {{ $secretName | toString }}
   labels:
     app.kubernetes.io/name: {{ include "akhq.name" . }}
     helm.sh/chart: {{ include "akhq.chart" . }}
@@ -10,10 +11,16 @@ metadata:
     app.kubernetes.io/managed-by: {{ .Release.Service }}
 type: Opaque
 data:
+{{- if and ( not .Values.existingSecrets) (.Values.secrets) }}
   application-secrets.yml: {{ toYaml .Values.secrets | b64enc | quote }}
   {{- if .Values.kafkaSecrets }}
   {{- range $key, $value := .Values.kafkaSecrets }}
   {{ $key }}: {{ $value | quote }}
   {{- end }}
   {{- end }}
-  {{- end }}
+{{- end }}
+{{- if (($secret.data).generatorSecret) }}
+  jwtSignatureGeneratorSecret: {{ $secret.data.generatorSecret }}
+{{- else }}
+  jwtSignatureGeneratorSecret: {{ randAlphaNum 64 | b64enc }}
+{{- end }}
