--- a/application.example.yml
+++ b/application.example.yml
@@ -289,3 +289,11 @@ akhq:
         - username: header-admin
           groups:
             - admin
+            
+  # Custom HTTP response headers configuration
+  http:
+    headers:
+      customResponseHeaders:
+        - "Content-Security-Policy|default-src 'none'; frame-src 'self'; script-src 'self'; connect-src 'self'; img-src 'self'; style-src 'self'; frame-ancestors 'self'; form-action 'self'; upgrade-insecure-requests"
+        - "X-Permitted-Cross-Domain-Policies|none"
+        - "Cross-Origin-Embedder-Policy|require-corp"
