--- a/application.example.yml
+++ b/application.example.yml
@@ -295,4 +295,13 @@ akhq:
         - username: header-admin
           groups:
             - admin
-            
+
+    # Data masking configuration
+    data-masking:
+      filters:
+        - description: "Masks value for secret-key fields"
+          search-regex: '"(secret-key)":".*"'
+          replacement: '"$1":"xxxx"'
+        - description: "Masks last digits of phone numbers"
+          search-regex: '"([\+]?[(]?[0-9]{3}[)]?[-\s\.]?[0-9]{3}[-\s\.]?)[0-9]{4,6}"'
+          replacement: '"$1xxxx"'
