--- a/client/package.json
+++ b/client/package.json
@@ -30,8 +30,7 @@
     "react-router-dom": "^5.1.2",
     "react-scripts": "^5.0.1",
     "react-timeago": "^6.2.1",
-    "react-toastify": "^6.0.6",
-    "reactstrap": "^8.4.0"
+    "react-toastify": "^6.0.6"
   },
   "scripts": {
     "start": "react-scripts start",
