Adding JWT payload compression

--- a/build.gradle
+++ b/build.gradle
@@ -153,6 +153,8 @@ dependencies {
     implementation group: 'software.amazon.msk', name: 'aws-msk-iam-auth', version: '2.0.0'
 
     implementation group: 'io.projectreactor', name: 'reactor-core', version: '3.5.11'
+
+    implementation 'io.jsonwebtoken:jjwt-impl:0.12.3'
 }
 
 /**********************************************************************************************************************\
