--- a/build.gradle
+++ b/build.gradle
@@ -129,6 +129,7 @@ dependencies {
     implementation 'com.google.guava:guava:32.1.3-jre'
     implementation 'com.google.code.gson:gson:2.10.1'
     implementation 'com.fasterxml.jackson.datatype:jackson-datatype-jdk8'
+    implementation 'com.fasterxml.jackson.datatype:jackson-datatype-jsr310'
 
     // avro
     implementation 'org.apache.avro:avro:1.11.0'
