--- a/docs/package.json
+++ b/docs/package.json
@@ -10,25 +10,27 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "axios": "^0.27.2",
-    "bootstrap": "5.2.0",
+    "axios": "^1.6.5",
+    "bootstrap": " 5.3.2",
     "font-awesome": "^4.7.0",
     "github-contributors-list": "^1.2.5",
-    "vuepress": "next"
+    "vuepress": "2.0.0-rc.0"
   },
   "devDependencies": {
-    "@vuepress/plugin-active-header-links": "next",
-    "@vuepress/plugin-back-to-top": "next",
-    "@vuepress/plugin-git": "next",
-    "@vuepress/plugin-google-analytics": "next",
-    "@vuepress/plugin-medium-zoom": "next",
-    "@vuepress/plugin-nprogress": "next",
-    "@vuepress/plugin-prismjs": "next",
-    "@vuepress/plugin-register-components": "next",
-    "@vuepress/plugin-search": "next",
-    "glob": "^8.0.3",
+    "@vuepress/bundler-vite": "^2.0.0-rc.0",
+    "@vuepress/plugin-active-header-links": "2.0.0-rc.0",
+    "@vuepress/plugin-back-to-top": "2.0.0-rc.0",
+    "@vuepress/plugin-git": "2.0.0-rc.0",
+    "@vuepress/plugin-google-analytics": "2.0.0-rc.0",
+    "@vuepress/plugin-medium-zoom": "2.0.0-rc.0",
+    "@vuepress/plugin-nprogress": "2.0.0-rc.0",
+    "@vuepress/plugin-prismjs": "2.0.0-rc.0",
+    "@vuepress/plugin-register-components": "2.0.0-rc.0",
+    "@vuepress/plugin-search": "2.0.0-rc.0",
+    "@vuepress/theme-default": "2.0.0-rc.0",
+    "glob": "^10.3.10",
     "http-server": "^14.1.1",
-    "inflection": "^1.13.2",
+    "inflection": "^3.0.0",
     "lodash.sortby": "^4.7.0",
     "markdown-it-meta": "0.0.1",
     "markdown-it-title": "^4.0.0"
