--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -133,6 +133,9 @@ akhq:
     poll-timeout: 1000
     kafka-max-message-length: 1000000
 
+  audit:
+    enabled: false
+
   security:
     default-group: admin
     roles:
