--- a/client/package.json
+++ b/client/package.json
@@ -21,7 +21,6 @@
     "event-source-polyfill": "^1.0.31",
     "font-awesome": "^4.7.0",
     "history": "^5.3.0",
-    "joi-validation": "^2.0.0",
     "lodash": "^4.17.21",
     "lossless-json": "^4.0.1",
     "prop-types": "^15.8.1",
@@ -64,6 +63,7 @@
     "eslint-plugin-prettier": "^5.1.3",
     "eslint-plugin-react": "^7.34.0",
     "jest-dom": "^4.0.0",
+    "joi": "^17.12.2",
     "joi-browser": "^13.4.0",
     "jsdom": "^24.0.0",
     "prettier": "^3.2.5",
