--- a/client/package.json
+++ b/client/package.json
@@ -15,7 +15,6 @@
     "axios": "^1.6.7",
     "bootstrap": "^5.3.3",
     "buffer": "^6.0.3",
-    "convert-units": "^2.3.4",
     "css-loader": "^6.10.0",
     "date-fns": "^2.17.0",
     "event-source-polyfill": "^1.0.31",
@@ -58,6 +57,7 @@
     "@testing-library/react": "^14.2.1",
     "@testing-library/user-event": "^14.5.2",
     "@vitejs/plugin-react": "^4.2.1",
+    "convert-units": "^2.3.4",
     "eslint": "^8.57.0",
     "eslint-config-prettier": "^9.1.0",
     "eslint-plugin-prettier": "^5.1.3",
@@ -66,6 +66,7 @@
     "joi": "^17.12.2",
     "joi-browser": "^13.4.0",
     "jsdom": "^24.0.0",
+    "moment": "^2.30.1",
     "prettier": "^3.2.5",
     "react-test-renderer": "^18.2.0",
     "sass": "^1.71.1",
